feat: rework authentication (#69)
- Modified User entity to support new authentication requirements
- Added logout functionality to clear token and session data